name:
  url-decoders
version:
  1
category:
  Web, Codecs
synopsis:
  Decoders for URL-encoding (aka Percent-encoding)
homepage:
  https://github.com/nikita-volkov/url-decoders
bug-reports:
  https://github.com/nikita-volkov/url-decoders/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2017, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/url-decoders.git

library
  hs-source-dirs:
    library
  exposed-modules:
    URLDecoders
  other-modules:
    URLDecoders.Text
    URLDecoders.Text.Stream
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    bytestring >= 0.10.8 && < 0.11,
    text >= 1 && < 2,
    base-prelude < 2,
    base < 5
